--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "file": "${workspaceFolder}/Test/index.html"
+            "file": "${workspaceFolder}/Vertical/index.html"
         }
     ]
 }
