--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -1,7 +1,7 @@
 {
     "routes": [
         { 
-            "route": "/WeatherAPI/*.html",
+            "route": "/WeatherAPI/weather.html",
             "headers": {
                 "cache-control": "must-revalidate, max-age=15770000"
             }
